fix: bundle Bebas Neue fonts for consistent rendering across macOS/Linux
- Add BebasNeue-Bold.ttf and BebasNeue-Regular.ttf (SIL OFL license)
- Prioritize Bold variant in _select_font() for impactful gossip overlays
- Both local macOS and GitHub Actions Ubuntu now use identical font
- Add font verification step to gossip_scheduler.yml workflow
- Install libfreetype6 in CI for reliable drawtext rendering

--- a/.github/workflows/gossip_scheduler.yml
+++ b/.github/workflows/gossip_scheduler.yml
@@ -36,7 +36,13 @@ jobs:
       - name: Install system deps (ffmpeg)
         run: |
           sudo apt-get update
-          sudo apt-get install -y ffmpeg
+          sudo apt-get install -y ffmpeg libfreetype6
+
+      - name: Verify bundled fonts
+        run: |
+          echo "=== Checking bundled fonts ==="
+          ls -la assets/fonts/ || echo "⚠️ assets/fonts/ not found!"
+          file assets/fonts/*.ttf 2>/dev/null || echo "⚠️ No .ttf files found"
 
       - name: Install Python deps
         run: |
